[package]
name = "neophys"
description = "an ap physics study attempt"
license = "Unlicense"
version = "0.1.0"
edition = "2021"
authors = ["Anzle Chavez <anzlemchavez@gmail.com>"]

[lib]
name = "neophys"
path = "src/lib.rs"

[[bin]]
name = "neophys_gui"
path = "src/app.rs"

[[bin]]
name = "neophys_dev"
path = "src/dev.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
nannou = "0.19.0"
nannou_egui = "0.19.0"
